@@ -1,2 +1,2 @@
-#Quisk version 4.2.49
+#Quisk version 4.2.50
 from .quisk import main
