@@ -377,12 +377,13 @@ python3 quisk.py
 <br>
 <p>
 If "make" fails, you probably have missing packages or missing "-dev" packages. Try to figure out what is missing from the error messages.
-You only clone github for the initial installation. To update Quisk, use pull:
+You only clone github for the initial installation. To update Quisk, use pull followed by make:
 </p>
 <br>
 <pre>
 cd ~/quisk
 git pull
+make
 </pre>
 <br>
 <p>
